# vinted-api-kit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  coverage.yaml
tests/: conftest.py  test_auth.py  test_client.py  test_item_service.py  test_session.py  test_user_agents.py  test_utils.py  test_vinted_api.py  test_vinted_http_client.py
tests/api/: test_catalog.py  test_items.py
tests/models/: test_catalog_item.py  test_config.py  test_detailed_item.py
tests/storage/: test_json.py  test_mozilla.py  test_pickle.py
vinted/: __init__.py  auth.py  client.py  constants.py  exceptions.py  session.py  utils.py
vinted/api/: __init__.py  base.py  catalog.py  items.py
vinted/models/: __init__.py  config.py  item.py
vinted/storage/: __init__.py  base.py  json.py  mozilla.py  pickle.py
vinted_api_kit/: __init__.py  utils.py  vinted_api.py
vinted_api_kit/client/: __init__.py  user_agents.py  vinted_http_client.py
vinted_api_kit/models/: __init__.py  catalog_item.py  detailed_item.py
vinted_api_kit/services/: __init__.py  item_service.py
