[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vinted-api-kit"
version = "1.0.0"
description = "Lightweight asynchronous Python client library for accessing Vinted API and scraping item data."
authors = [
    {name = "Lymar Volodymyr",email = "volodymyr.lymar1@gmail.com"},
]
maintainers = [
    {name = "Lymar Volodymyr",email = "volodymyr.lymar1@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "curl-cffi (>=0.12.0,<0.13.0)"
]

keywords = ["python", "async", "vinted", "api", "vinted-api", "web-scraping", "ecommerce"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Topic :: Communications",
]

[project.urls]
Homepage = "https://github.com/vlymar1/vinted-api-kit"
Documentation = "https://github.com/vlymar1/vinted-api-kit"
Repository = "https://github.com/vlymar1/vinted-api-kit"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.14.9",
    "mypy>=1.17",
    "pre-commit>=4.2.0",
    "tox>=4.28.3",
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
test = "pytest -v --tb=short {args:tests}"
test-cov = "pytest -v --cov=vinted --cov-report=html --cov-report=term-missing {args:tests}"
lint = "ruff check vinted/ tests/"
format = "ruff format vinted/ tests/"
type-check = "mypy vinted/"
install-dev = "pip install -e ."
setup-hooks = "pre-commit install"
all = ["format", "lint", "type-check", "test-cov"]

[tool.hatch.build.targets.wheel]
packages = ["vinted"]

[tool.ruff]
exclude = [
    ".git",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "dev/",
]
line-length = 99
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4", "E7", "E9", "F",
    "I001",
    "I002",
    "T201",
]
ignore = ["F821"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_return_any = true
show_column_numbers = true
pretty = true
exclude = [
    "tests/",
    "dev/",
    ".venv/",
    "build",
    "dist/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov-branch --cov-fail-under=80"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
